# adventOfCode2020

./: Cargo.toml
src/day1/: main.rs
src/day2/: main.rs
src/day3/: main.rs
src/day4/: main.rs
src/day5/: main.rs
